# cloudbatch

./: .gitignore  README.md  gsbatch_tutorial_notebook.ipynb  install.sh  setup.cfg
cloudbatch/: __init__.py  apply_batch_func.py  cdsbatch.py  filemaker.py  gsbatch.py  localbatch.py
gsbatch/: __init__.py  gsbatch.py  gsbatch_apply.py
notebooks/: 1_getting_started.ipynb  2_batching_functions.ipynb
