[metadata]
name = gsbatch
#version = attr: my_package.VERSION
description =  GSBatch
long_description = file: README.md

[options]
install_requires =
    pandas
    numpy
    matplotlib
    scipy
    xarray
    dask[complete]
    netcdf4
    rioxarray
package_dir=
    =.
packages=find:
python_requires = >=3.7

[options.packages.find]
where=.
